--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808076.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/01/zhaoliying-320x200.jpg">被郑恺抢答当妈比拍戏更辛苦 赵丽颖一脸尴尬</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-320x200.jpg">【持续更新】武汉肺炎速扩9省市 已死4人</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
@@ -49,6 +49,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808789.md#1">中共开放坏账市场 分析师：投资人应小心</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808988.md#1">安徽宿松现亚硝酸盐事件 1死17人中毒</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808890.md#1">武汉15医护者被感染 上海确诊一宗新个案</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808076.md#1">被郑恺抢答当妈比拍戏更辛苦 赵丽颖一脸尴尬</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808467.md#1">武汉肺炎刷屏 影视股狂跌 徐峥新片宣布提档</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807850.md#1">汤唯：常与章子怡和高圆圆交流育儿经</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808635.md#1">大陆ETC多收费现象严重 抱怨声四起</a><br>
@@ -56,7 +57,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808682.md#1">武汉肺炎患者激增 培训机构停课有企业停工</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808739.md#1">武汉肺炎人传人 春运期防疫恐比萨斯严峻</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807920.md#1">新疆库尔勒原空军军官王福军夫妻的遭遇</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">【持续更新】武汉肺炎速扩9省市  已死4人</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808454.md#1">大陆新婚人数连降 11年来首次跌破千万对</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808082.md#1">肺炎告急 武汉实施出境管控 习李督战</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808320.md#1">乐视网去年预亏112亿? 28万股东堪忧</a><br>
