--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -31,6 +31,7 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank">日本特色书店（2）茑屋书店公寓</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7bb2d0c9ab7783a8335b21ef825b1b37-150x120.jpg" align ="left"></a>TSUTAYA BOOK APARTMENT由创立“茑屋书店”的ＣＣＣ集团（Culture Convenience Club）的TSUTAYA开设的新式设施，就位在新宿站旁边，是一个24小时营业的“放松空间”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 1:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank">地毯应定期清洁 避免常见8误区</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ead7e966a6f01a_ttl7dayOvO_shutterstock_1430294426-150x120.jpg" align ="left"></a>坊间流传许多清洁地毯的小技巧。事实上这些技巧中，有许多反而会把情况越弄越糟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank">牙龈红肿发炎怎么办？中医荐1种食物和3味中药</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Inflammation-of-the-gums-food_697827745-150x120.jpg" align ="left"></a>牙龈肿痛、发炎，不只是口腔的问题，以中医观点来讲，这跟脏腑经络有关系。上牙龈属于足阳明胃经，下牙龈属于手阳明大肠经，若上下牙龈皆痛，通常跟肾虚有关。实火属于急性发炎，症状往往来得快，且持续疼痛。虚火属于慢性发炎，牙龈肿痛时好时坏， 迁延日久。牙龈发炎，中医如何治疗？改善牙龈发炎的1种食物和3味中药：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809592.md#1" target="_blank">珀斯AMP大楼锁定长期租户</a><br></h3>安保资本（AMP Capital）所拥有的圣乔治大道140号（140 St Georges Terrace）守住了4层租户，使该写字楼空置率下降至1%以下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809519.md#1" target="_blank">珀斯Spudshed家族企业利润增两倍</a><br></h3>作为西澳最著名家族企业之一，Spudshed控股公司利润增加了两倍多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809492.md#1" target="_blank">珀斯Applecross15层公寓获批</a><br></h3>最近，一个位于Applecross的大型公寓综合开发项目-Canning Beach Promenade获批，联合开发评估小组声称此项目为Canning Bridge活动中心的开发项目树立了典范。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803462.md#1" target="_blank">汽车维修问与答：开车时方向盘为何抖动</a><br></h3>汽车维修问与答
@@ -38,10 +39,5 @@
 读者Helena问：Dear?Mr. Lee,
 
 You are great in helping my husband Dennis to solve the car problem last year and hope you can help me with my car this ti.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:44 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803441.md#1" target="_blank">了解日本汽车的制造技术</a><br></h3>在全世界，众所周知的事实是美国人都喜欢自己国家的汽车。几十年来，美国人绝大多数都选择了美国的三大汽车制造商的汽车，通用汽车、福特和克莱斯勒来满足他们的需求。
-
-&nbsp;
-
-福特汽车通过将汽车生产装配线自动化彻底改变了汽车制造业。这种技术适应于大量生产同一种类型的车辆（甚至颜色最好也要相同）。这样可以使工人尽.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
